src/assets/css/blocks/home.css
.home {
	display: flex;
	flex-direction: column;
	gap: var(--size-8);

	& .about {
		column-gap: var(--size-3);
		display: grid;

		& li {
			max-width: revert;
		}

		& .interest-list {
			background-color: revert;

			& *:not(summary) {
				overflow: hidden;
			}

			&,
			& summary {
				margin: revert;
				padding: revert;
			}

			& summary {
				cursor: pointer;
				font-weight: revert;
			}

			&[open] summary {
				margin-bottom: var(--flow-space);
			}

			& ul {
				margin-left: var(--size-4);
			}
		}

		@media (width >= 768px) {
			grid-template-columns: 2fr 1fr;
			row-gap: var(--size-8);
		}
	}
}

